Code refactoring and input file reader changed